Bug 185910 - crashed when adding emoticon package
Summary: crashed when adding emoticon package
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_emoticons (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Carlo Segato
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-03-01 22:26 UTC by Emil
Modified: 2009-03-26 04:12 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Emil 2009-03-01 22:26:21 UTC
Version:           0.60.4 (using KDE 4.1.4)
OS:                Linux
Installed from:    Ubuntu Packages

i was brosing smilie packs in kopete, and when i tried to install one it crashed :(

this is the error log (or what you call it)
hope its nothing major

--------------------------------------------
Application: Kopete (kopete), signal SIGABRT
[Current thread is 0 (LWP 12107)]

Thread 3 (Thread 0xb18d8b90 (LWP 12122)):
#0  0xb7f06430 in __kernel_vsyscall ()
#1  0xb5dcd075 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0xb637cbbd in pthread_cond_wait () from /lib/tls/i686/cmov/libc.so.6
#3  0xb73456f2 in QWaitCondition::wait () from /usr/lib/libQtCore.so.4
#4  0xb5fa4532 in ?? () from /usr/lib/libQtNetwork.so.4
#5  0xb73446ae in ?? () from /usr/lib/libQtCore.so.4
#6  0xb5dc950f in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#7  0xb636ea0e in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 2 (Thread 0xb20d9b90 (LWP 12139)):
#0  0xb7f06430 in __kernel_vsyscall ()
#1  0xb6366df1 in select () from /lib/tls/i686/cmov/libc.so.6
#2  0xb7414150 in ?? () from /usr/lib/libQtCore.so.4
#3  0xb73446ae in ?? () from /usr/lib/libQtCore.so.4
#4  0xb5dc950f in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#5  0xb636ea0e in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 1 (Thread 0xb57bd6c0 (LWP 12107)):
[KCrash Handler]
#6  0xb7f06430 in __kernel_vsyscall ()
#7  0xb62b88a0 in raise () from /lib/tls/i686/cmov/libc.so.6
#8  0xb62ba268 in abort () from /lib/tls/i686/cmov/libc.so.6
#9  0xb733c795 in qt_message_output () from /usr/lib/libQtCore.so.4
#10 0xb733c872 in qFatal () from /usr/lib/libQtCore.so.4
#11 0xb733c8cc in qt_assert_x () from /usr/lib/libQtCore.so.4
#12 0xaae5f69e in ?? () from /usr/lib/kde4/kcm_emoticons.so
#13 0xaae5e0c8 in ?? () from /usr/lib/kde4/kcm_emoticons.so
#14 0xb7449a60 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#15 0xb7449e60 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#16 0xb6f03e61 in QAbstractButton::clicked () from /usr/lib/libQtGui.so.4
#17 0xb6c57199 in ?? () from /usr/lib/libQtGui.so.4
#18 0xb6c58d94 in ?? () from /usr/lib/libQtGui.so.4
#19 0xb6c59026 in QAbstractButton::mouseReleaseEvent () from /usr/lib/libQtGui.so.4
#20 0xb696d962 in QWidget::event () from /usr/lib/libQtGui.so.4
#21 0xb6c5703e in QAbstractButton::event () from /usr/lib/libQtGui.so.4
#22 0xb6cfd910 in QPushButton::event () from /usr/lib/libQtGui.so.4
#23 0xb69158ec in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#24 0xb691e0e1 in QApplication::notify () from /usr/lib/libQtGui.so.4
#25 0xb7974d1d in KApplication::notify () from /usr/lib/libkdeui.so.5
#26 0xb7434e61 in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#27 0xb691d36e in QApplicationPrivate::sendMouseEvent () from /usr/lib/libQtGui.so.4
#28 0xb6987656 in ?? () from /usr/lib/libQtGui.so.4
#29 0xb69869e5 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#30 0xb69b07aa in ?? () from /usr/lib/libQtGui.so.4
#31 0xb5e166f8 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#32 0xb5e19da3 in ?? () from /usr/lib/libglib-2.0.so.0
#33 0xb5e19f61 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#34 0xb745f478 in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#35 0xb69afea5 in ?? () from /usr/lib/libQtGui.so.4
#36 0xb743352a in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#37 0xb74336ea in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#38 0xb6d82987 in QDialog::exec () from /usr/lib/libQtGui.so.4
#39 0xb3613673 in ?? () from /usr/lib/kde4/kcm_kopete_chatwindowconfig.so
#40 0xb3615e9b in ?? () from /usr/lib/kde4/kcm_kopete_chatwindowconfig.so
#41 0xb7449a60 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#42 0xb7449e60 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#43 0xb6f03e61 in QAbstractButton::clicked () from /usr/lib/libQtGui.so.4
#44 0xb6c57199 in ?? () from /usr/lib/libQtGui.so.4
#45 0xb6c58d94 in ?? () from /usr/lib/libQtGui.so.4
#46 0xb6c59026 in QAbstractButton::mouseReleaseEvent () from /usr/lib/libQtGui.so.4
#47 0xb696d962 in QWidget::event () from /usr/lib/libQtGui.so.4
#48 0xb6c5703e in QAbstractButton::event () from /usr/lib/libQtGui.so.4
#49 0xb6cfd910 in QPushButton::event () from /usr/lib/libQtGui.so.4
#50 0xb69158ec in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#51 0xb691e0e1 in QApplication::notify () from /usr/lib/libQtGui.so.4
#52 0xb7974d1d in KApplication::notify () from /usr/lib/libkdeui.so.5
#53 0xb7434e61 in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#54 0xb691d36e in QApplicationPrivate::sendMouseEvent () from /usr/lib/libQtGui.so.4
#55 0xb6987656 in ?? () from /usr/lib/libQtGui.so.4
#56 0xb69869e5 in QApplication::x11ProcessEvent () from /usr/lib/libQtGui.so.4
#57 0xb69b07aa in ?? () from /usr/lib/libQtGui.so.4
#58 0xb5e166f8 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#59 0xb5e19da3 in ?? () from /usr/lib/libglib-2.0.so.0
#60 0xb5e19f61 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#61 0xb745f478 in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#62 0xb69afea5 in ?? () from /usr/lib/libQtGui.so.4
#63 0xb743352a in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#64 0xb74336ea in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#65 0xb7435da5 in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#66 0xb6915767 in QApplication::exec () from /usr/lib/libQtGui.so.4
#67 0x0808aa3f in _start ()
Comment 1 Carlo Segato 2009-03-01 22:53:51 UTC
what emoticons theme did you try to install?
Comment 2 Dario Andres 2009-03-02 00:44:04 UTC
If you can reproduce the crash at will, may you read http://techbase.kde.org/Development/Tutorials/Debugging/How_to_create_useful_crash_reports and post a complete backtrace here? 
You may need to install the "kdebase-runtime-dbg" package
Thanks :)
Comment 3 Emil 2009-03-02 16:45:38 UTC
it was the onion theme (unified with standard)

ill see if i can recreate it.
Comment 4 Emil 2009-03-07 00:27:50 UTC
seems i cant recreate it, however, that particular emoticon pack wont install!
i click intsall, then after i while it changes to uninstall. but when i exit the window and go back to the emoticon manager, its not there!

the pack is "onionpack + standard msn"
the regular onion pack however, works fine.

i have also noticed that in login manager, i cant install new themes either!
i click on install, and they change to uninstall (they are still "installed" if i open the window at a later time (the "get new themes" window)), but they are not in the list so i can choose them!

with the onion pack + msn standard, its like i never installed them.
Comment 5 Carlo Segato 2009-03-07 01:42:54 UTC
that emoticons theme won't install with get new themes since it's not hosted on kde-look but it redirects to megaupload
Comment 6 Christoph Feck 2009-03-26 04:10:55 UTC
SVN commit 944769 by cfeck:

Do not access empty file list

BUG: 185910


 M  +2 -1      emoticonslist.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=944769
Comment 7 Christoph Feck 2009-03-26 04:12:16 UTC
SVN commit 944771 by cfeck:

Do not access empty file list (backport 944769)

CCBUG: 185910


 M  +2 -1      emoticonslist.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=944771