Do not access empty file list

BUG: 185910

svn path=/trunk/KDE/kdebase/runtime/; revision=944769